--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "psicotools-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Servidor para la hacer una pagina CRUD aplicando API REST",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/G45-Proyecto-grupo-2/psicotools-backend#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.8",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.13"
   }
 }
